# lumipet-identification-test

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
baselines/training/: wildlife_tools_train.ipynb
cat_reid/config/: settings.py
cat_reid/data/: loader.py
cat_reid/db/: embedding_store.py  embeddings.npy  labels.pkl
cat_reid/evaluation/: metrics.py
cat_reid/inference/: knn_classifier.py
cat_reid/input/: camera.py  file.py  register.py
cat_reid/models/: extractor.py
cat_reid/preprocessing/: transform.py
cat_reid/training/: trainer.py
cat_reid/visualization/: renderer.py
reid/: __init__.py  cli.py  container.py  pipeline.py
reid/cfg/: default.yaml
reid/cfg/trackers/: bytetrack.yaml
reid/core/: config.py  filters.py  tracker.py  types.py
reid/data/: loader.py  transforms.py
reid/engine/: model.py  predictor.py  trainer.py  validator.py
reid/models/: __init__.py
reid/models/extractor/: __init__.py  embedding.py  model.py  predict.py  train.py  val.py
reid/models/extractor/mega_descriptor/: __init__.py  model.py  train.py
reid/models/extractor/wildlife/: __init__.py  model.py  train.py
reid/models/matcher/: __init__.py  faiss.py  knn.py  model.py
reid/models/reid/: __init__.py  model.py  predict.py
reid/models/yolo/: __init__.py  model.py
reid/models/yolo/detect/: __init__.py  predict.py
reid/stream/: input.py  overlay.py  service.py
reid/utils/: __init__.py  checks.py  hashing.py  profiler.py
tests/: test_database.py  test_hashing.py  test_optimization.py  test_tracking.py  test_wildlife.py
